# staircase_detection

./: CMakeLists.txt  README.md  package.xml
config/: staircase_params.yaml
launch/: plane_find.launch
msg/: centroid_list.msg  centroid_list.msg~
src/: find_planes.cpp  preprocess.cpp  preprocess.cpp.autosave  preprocessv2.cpp  validate_steps.cpp
