<?xml version="1.0"?>
<package>
    <name>staircase_detection</name>
    <version>0.1.0</version>
    <description>The staircase_detection package</description>
    <maintainer email="acho@kth.se">Abhishek Choudhary</maintainer>
    <license>Apache 2.0</license>
    <author email="acho@kth.se">Abhishek Choudhary</author>

    <run_depend>message_runtime</run_depend>
    <build_depend>message_generation</build_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

  <export>

  </export>
</package>

